--- a/test_model.ipynb
+++ b/test_model.ipynb
@@ -52,7 +52,7 @@
     "* 1: Model B. 3 convolutions in the first / bottom layer | 2 convolutions in the second / top layer\n",
     "* 3: Model C. 4 convolutions in the first / bottom layer | 2 convolutions in the second / top layer\n",
     "\n",
-    "Last model, Model D, have encoder output depth of 1.\n",
+    "Last model, Model D, has encoder output depth of 1.\n",
     "* embed1: Model D. 2 convolutions in the first / bottom layer | 1 convolution in the second / top layer\n",
     "\n",
     "It takes as the input the padded image in the `transformed_images` directory from the above code block and generate the following images in the `transformed_images` directory: \n",
@@ -1543,7 +1543,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1557,7 +1557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
